# sfs

./: .eslintrc.cjs  .gitignore  .prettierrc  .prettierrc.json  Cargo.toml  README.md  TODO.md  index.html  login.html  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: Cargo.toml  tauri.conf.json
backend/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  datetime.rs  fs.rs  lib.rs
frontend/: .eslintrc.cjs
frontend/src/: App.tsx
frontend/src/components/: IconButton.tsx  Navbar.tsx
frontend/src/components/inputs/: index.ts
frontend/src/components/modals/: InfoModal.tsx  SettingsModal.tsx
frontend/src/context/: ContextProvider.tsx  ModalContext.ts  SelectedContext.ts  appStateReducer.ts  index.ts
frontend/src/types/: ActionType.ts  DirectoryRecord.ts  FileRecord.ts  FileTimes.ts  ModalEnum.ts  Record.ts  SelectedState.ts
libsfs/: Cargo.toml
libsfs/src/: config.rs  datetime.rs  error.rs  errors.rs  filetime.rs  fs.rs  lib.rs
sfs-ui/: Cargo.toml  tauri.conf.json
sfs-ui/icons/: icon.icns
sfs-ui/src/: commands.rs  main.rs
src/: App.tsx  Login.tsx  LoginScreen.tsx  Photo.tsx  appStateReducer.ts  contexts.ts  index.css  index.d.ts  login.tsx  main.tsx  mock.json
src-app/: App.tsx  Login.tsx  appStateReducer.ts  index.css
src-app/components/: ContextMenu.tsx  DropZone.tsx  FileTable.tsx  IconButton.tsx  Navbar.tsx  Sidebar.tsx  TableRow.tsx  TitleBar.tsx  WorkingDir.tsx
src-app/components/inputs/: PathInput.tsx
src-app/components/modals/: InfoModal.tsx  Modal.tsx  MoveToModal.tsx  NewDirectoryModal.tsx  NewFileModal.tsx
src-app/context/: AppStateContext.ts  ContextProvider.tsx
src-app/hooks/: useAsyncDispatch.ts  useContextMenu.ts
src-app/types/: Action.ts  ActionType.ts  AppState.ts  DirectoryRecord.ts  FileRecord.ts  FileTimes.ts  ModalEnum.ts  ModalState.ts  PathSegment.ts  SymlinkRecord.ts
src-app/utils/: colors.ts  getIcon.ts  getTimeString.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-viewer/: App.tsx
src-viewer/components/: AudioPlayer.tsx
src/components/: Alert.tsx  ContextMenu.tsx  DropZone.tsx  FileTable.tsx  IconButton.tsx  NavIcon.tsx  Navbar.tsx  Sidebar.tsx  TableRecord.tsx  TableRow.tsx  TitleBar.tsx  WorkingDir.tsx  index.ts
src/components/inputs/: PathInput.tsx  intex.ts
src/components/modals/: DeleteModal.tsx  InfoModal.tsx  Modal.tsx  NewDirectoryModal.tsx  NewFileModal.tsx  NewFolderModal.tsx  PropertiesModal.tsx  RenameModal.tsx  SearchModal.tsx  SendToModal.tsx  SettingsModal.tsx  index.ts
src/context/: AppStateContext.ts  ContextProvider.tsx  ModalContext.ts  SelectedContext.ts  appState.ts  appStateReducer.ts  index.ts  modal.ts  selected.ts
src/hooks/: index.ts  useAppStateContext.ts  useAsyncDispatch.ts  useModalContext.ts  useSelectedContext.ts
src/types/: Action.ts  ActionType.ts  AlertProps.tsx  AlertType.ts  AppState.ts  DateTime.ts  DirectoryRecord.ts  FileRecord.ts  FileTime.ts  FileTimes.ts  MenuItemType.ts  Meta.ts  ModalEnum.ts  ModalProps.ts  ModalState.ts  Record.ts  RecordInner.ts  SelectedState.ts  SymlinkRecord.ts  appState.ts  index.ts  modal.ts  record.ts
src/utils/: colors.ts  getIcon.ts  getTimeString.ts  human.ts  humanFileSize.ts  humanTime.ts  index.ts  mapExtIcon.tsx
src/windows/: login.tsx
windows/: login.html  login.tsx  main.html  main.tsx  photo.html  photo.tsx  viewer.html  viewer.tsx
