[package]
name = "libsfs"
version = "0.1.0"
edition = "2021"


[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.2"
itertools = "0.12.0"
rkyv = { version = "0.7.43", features = ["validation"] }
serde = { version = "1.0.194", features = ["derive"] }
snap = "1.1.1"
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
all = "warn"

must_use_candidate = "allow"
missing_panics_doc = "allow"
