[package]
name = "sfs-ui"
version = "0.1.0"
description = "A secure file system"
authors = ["you"]
license = "MIT"
repository = "https://github.com/blood-rogue/sfs"
edition = "2021"
rust-version = "1.75"


[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["process-exit"] }
libsfs = { path = "../libsfs" }

[features]
custom-protocol = ["tauri/custom-protocol"]


[lints.clippy]
pedantic = "warn"
nursery = "warn"
all = "warn"

needless_pass_by_value = "allow"
