[package]
name = "sfs-ui"
version = "0.1.0"
description = "A secure file system"
authors = ["you"]
license = "MIT"
repository = "https://github.com/blood-rogue/sfs"
edition = "2021"
rust-version = "1.75"


[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
tauri = { version = "1.6.1", features = [
    "clipboard-write-text",
    "window-show",
    "window-start-dragging",
    "window-minimize",
    "window-maximize",
    "window-hide",
    "window-close",
    "window-unmaximize",
    "window-unminimize",
    "dialog-save",
    "dialog-open",
    "process-exit",
] }
argon2 = { version = "0.5.3", features = ["std"] }
libsfs = { path = "../libsfs" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net"] }
axum = "0.7.5"


[features]
custom-protocol = ["tauri/custom-protocol"]


[lints.clippy]
pedantic = "warn"
nursery = "warn"
all = "warn"

needless_pass_by_value = "allow"
